--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,6 +1,5 @@
 .login{
 
-
   .main-icon{
     width: 60%;
     display: block;
@@ -13,10 +12,14 @@
   .btn-group{
     width:100%;
     text-align: center;
-    margin-top: 30%;
+    margin-top: 25%;
     line-height: 1.5em;
   }
 
-
-
+  .message{
+    color: red;
+    width:100%;
+    text-align: center;
+    line-height: 1.5em;
+  }
 }
