--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -60,3 +60,50 @@
     }
   }
 }
+
+.type3{
+  float:left;
+  .image-holder{
+    img{
+
+      width: auto;
+      height: 100%;
+      max-width: 200%;
+      max-height: 100%;
+
+      // -webkit-transform:scale(1.25); /* Safari and Chrome */
+      // -moz-transform:scale(1.25); /* Firefox */
+      // -ms-transform:scale(1.25); /* IE 9 */
+      // -o-transform:scale(1.25); /* Opera */
+      // transform:scale(1.25);
+    }
+      width: 5.5em;
+      max-width: 33%;
+      height: 5.5em;
+      overflow: hidden;
+      position: absolute;
+      margin-top: -2em;
+      margin-left: 1em;
+
+
+      box-shadow: 1px 1px 15px;
+      -moz-box-shadow: 1px 1px 15px;
+      -webkit-box-shadow: 2px 5px 15px -2px #999999;
+      -o-box-shadow: 1px 1px 15px;
+      -ms-box-shadow: 1px 1px 15px;
+  }
+  .content{
+    margin-left: 8em;
+    width: 60%;
+    .title{
+      font-size: 22px;
+      padding-top: .4em;
+    }
+
+    .card-subtitle{
+      font-size: 12px;
+    }
+  }
+  margin-top:2.5em;
+
+}
